flexbox fixes to header/main/footer
flexbox issues when using max-height: 100vh; on the .site-wrap . Must
add the same amount of “flex-grow” as the header height to fix this.
(This can’t be right? Maybe a sticky footer is too much to ask for on
iOS?)

--- a/css/scss/layout/default/_main-content.scss
+++ b/css/scss/layout/default/_main-content.scss
@@ -1,15 +1,17 @@
 .site-wrap {
   display: flex;
-  flex-flow: column;
-  //min-height: 100%;
+  flex-direction: column;
+  min-height: 100%;
   height: 100vh;  
   .IE10 & {
     height: 100%; 
   } 
 }
 
-.site-header, .site-footer {
-  flex: 0 1 auto; 
+.site-header,
+.site-footer {
+  flex: 1 0 auto;
+   
 }
 
 .site-content {
