--- a/css/scss/layout/default/_site-footer.scss
+++ b/css/scss/layout/default/_site-footer.scss
@@ -1,5 +1,4 @@
 .site-footer {
-  flex: 1 0 auto;
 	padding-top: 1em;
 	padding-bottom: 1em;  
 	position: relative;
